Add HTTP APIs for github.com/elmasy-com/elnet/domain functions (Issue #2)
